# Personal-Assistant-WEB

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
assistant/: manage.py
assistant/assistant/: settings.py  urls.py
assistant/book_app/: admin.py  models.py  urls.py  views.py
assistant/book_app/migrations/: 0001_initial.py  0002_initial.py  0002_telephone_alter_email_email_delete_happy.py  0003_nickname_author.py  0004_alter_email_email_alter_nickname_nickname_and_more.py
assistant/book_app/templates/book_app/: contact.html  contact_edit.html  (+15 more)
assistant/main/: urls.py  views.py
assistant/main/migrations/: 0001_initial.py
assistant/mediauploadapp/: admin.py  filechecker.py  forms.py  models.py  urls.py  views.py
assistant/mediauploadapp/migrations/: 0001_initial.py  0002_book_author_id_file_author_id_photo_author_id.py  0002_initial.py  0002_photo.py
assistant/newsapp/: urls.py  views.py
assistant/newsapp/templates/: books.html  fashion.html  index.html  scrape.html  scrape_currency.html  scrape_it.html  scrape_sport.html
assistant/note_app/: models.py  urls.py  views.py
assistant/note_app/migrations/: 0001_initial.py  0002_initial.py  0002_note_author.py  0003_tag_author_alter_tag_name.py
assistant/theme/static_src/: package-lock.json  tailwind.config.js
assistant/theme/templates/: base.html
assistant/users/: decorators.py  forms.py  models.py  urls.py  views.py
assistant/users/migrations/: 0001_initial.py  0002_customuser_avatar_alter_customuser_first_name_and_more.py
assistant/users/templates/: index.html
(+57 files in other folders)
