[tool.poetry]
name = "personal-assistant-web"
version = "0.1.0"
description = ""
authors = ["Ivan Yevpat <maracasabat@gmail.com>"]
readme = "README.md"
packages = [{include = "personal_assistant_web"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
