[tool.poetry]
name = "personal-assistant-web"
version = "0.1.0"
description = ""
authors = ["Ivan Yevpat <maracasabat@gmail.com>"]
readme = "README.md"
packages = [{include = "personal_assistant_web"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
Pillow = "^9.3.0"
django-crispy-forms = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
