[tool.poetry]
name = "personal-assistant-web"
version = "0.1.0"
description = ""
authors = ["Ivan Yevpat <maracasabat@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "personal_assistant_web"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
django-tailwind = "^3.4.0"
django-tinymce = "^3.5.0"
psycopg2-binary = "^2.9.5"
django-dotenv = "^1.4.2"
django-crispy-forms = "^1.14.0"
fontawesomefree = "^6.2.1"
Pillow = "^9.3.0"
bs4 = "^0.0.1"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
django-allauth = "^0.51.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
